Tooltip icon alignment fix

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
@@ -287,7 +287,6 @@ $arrow-color: #000;
 }
 
 .agents-table {
-  margin-bottom: 30px;getget
   thead {
     tr {
       background:    $table-header-bg;
@@ -297,9 +296,6 @@ $arrow-color: #000;
         padding: 5px 10px;
       }
     }
-  }
-  &.agents-table-head{
-    margin-bottom:0;
   }
 }
 
